--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@supabase/supabase-js": "^2.53.0",
     "@types/recharts": "^2.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
